@@ -11,6 +11,7 @@
 * Client/WebUI/Wallet: "balance.zip" also lists coins belonging to segwit ver 1 (taproot) address types (got from pubkeys)
 * Client: for incomming connections, send "version" message only after receiving one (in sync with core's behaviour)
 * Lib: Fixed a bug in chain.GetNextWorkRequired() that was causing the problem at Testnet3 block #3229632
+* Client/TextUI: removed commands "bip9" and "usd"
 
 1.10.3 - 2024-08-13:
 * Tools/balio: Some improvements around blockchair.com and blockcypher.com API
